# Depression-stimulants-in-Indian-Society-

./: .gitignore  main.py  pyproject.toml  run_pipeline.py
.dvc/: config
data/: interim.dvc
src/pipelines/: regex_based_cleaning.py  slm_based_cleaning.py
src/steps/: ingest.py
