[project]
name = "depression-societal-mirror"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "zenml[server]>=0.55.0",
    "torch>=2.4.0", # Stable for CUDA 11.8
    "torchvision",
    "transformers",
    "sentence-transformers",
    "scikit-fuzzy",
    "pandas",
    "zstandard",
    "accelerate",
    "bitsandbytes>=0.42.0", # Essential for 4-bit Menta loading
    "dvc[gdrive]>=3.66.1",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]
